SONAR-12632 Prevent activity graph labels from overlapping

--- a/components/charts/LineChart.css
+++ b/components/charts/LineChart.css
@@ -53,7 +53,6 @@
 .line-chart-tick {
   fill: var(--secondFontColor);
   font-size: var(--smallFontSize);
-  text-anchor: middle;
 }
 
 .line-chart-tick-x {
